messy page and updates to home page html

--- a/About_Danny/index.html
+++ b/About_Danny/index.html
@@ -159,7 +159,7 @@
     <img src="/About_Danny/images/Danny-Magic-logo.png" class="danny-magic-logo">
 
     <h5>Copyright © 2022 Danny Magic, Inc.</h5>
-    <h5><a href="/About_Danny/About_Danny_Messy/index.html" style="color: red;">don't click here</a></h5>
+    <h5><a href="/index.html">BACK HOME!</a>&nbsp&nbsp&nbsp<a href="/About_Danny/About_Danny_Messy/index.html">GET MESSY!</a></h5>
 
 </footer>
 
