--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </ul>
     </nav>
 
-    <a href="https://nashvillesoftwareschool.com/">
+    <a href="https://nashvillesoftwareschool.com/" target="_blank">
       <div class="nss_logo">
         <img
           src="/Home_Page/Team_images/NSS-logo-horizontal-small.jpg"
@@ -52,17 +52,17 @@
     </div>
     <div class="instructors">
      </a>
-      <a href="https://www.linkedin.com/in/sydneycnoh/">
+      <a href="https://www.linkedin.com/in/sydneycnoh/" target="_blank">
         <img
           src="/Home_Page/Team_images/Sydney Noh.png"
           class="instructor_img"
           alt="Sydney Noh.pn"
-      /><a href="https://www.linkedin.com/in/lynnsamuelson/">
+      /><a href="https://www.linkedin.com/in/lynnsamuelson/" target="_blank">
         <img
           class="instructor_img"
           src="/Home_Page/Team_images/Lynn Samuelson.png"
           alt="Lynn Samuelson"
-      /><a href="https://www.linkedin.com/in/trevor-guinn-aba48274/">
+      /><a href="https://www.linkedin.com/in/trevor-guinn-aba48274/" target="_blank">
         <img
           class="instructor_img"
           src="/Home_Page/Team_images/Trevor Guinn.png"
@@ -156,9 +156,9 @@
           <h3>Danny</h3>
           <p class="role">Cohort E20</p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quaerat
-            tempora, voluptatum quas facere dolorum aut cumque nihil nulla harum
-            nemo distinctio quam blanditiis dignissimos.
+            Yo! I've been working in HR technology for most of my professional career (~8 years).
+            I've always had an interest in becoming a software developer, so that's why I'm here!
+            Click my face above for more details!
           </p>
           <a href="https://github.com/dannyherrmann" target="_blank"
             ><i
@@ -202,21 +202,21 @@
     </section>
     <footer class="footer">
       <section class="icons">
-        <a href="https://www.facebook.com/NashvilleSoftwareSchool">
+        <a href="https://www.facebook.com/NashvilleSoftwareSchool" target="_blank">
           <i
             class="iconify fa-3x icon"
             data-icon="fa:facebook-square"
             style="color: #d77818; margin: 10px"
           ></i
         ></a>
-        <a href="https://www.linkedin.com/school/nashville-software-school/">
+        <a href="https://www.linkedin.com/school/nashville-software-school/" target="_blank">
           <i
             class="iconify fa-3x icon"
             data-icon="fa6-brands:linkedin"
             style="color: #d77818; margin: 10px"
           ></i
         ></a>
-        <a href="https://twitter.com/nashsoftware">
+        <a href="https://twitter.com/nashsoftware" target="_blank">
           <i
             class="iconify fa-3x icon"
             data-icon="fa-brands:twitter-square"
