--- a/About_Yogi/index.html
+++ b/About_Yogi/index.html
@@ -1,50 +1,60 @@
 <!DOCTYPE html>
-<html<lang="en">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="/About_Yogi/main.css" />
+
     <title>About Yogi</title>
   </head>
 
   <body>
-    
     <div class="container">
       <h1>About Me</h1>
+
       <section class="aboutMe_1">
-      <img src="/Home_Page/Team_images/Yogi.png" alt="picture of Yogi"/>
+        <a href="/About_Yogi/index.html">
+          <img src="/Home_Page/Team_images/Yogi.png" alt="picture of Yogi"
+        /></a>
       </section>
-                <hr> 
-                <div class="list-items">
-            <ul>
-        <li>Portfolio</li>
-        <li>Skills</li>
-        <li>Contact</li>
-      </ul>
+
+      <hr />
+
+      <div class="list-items">
+        <ul>
+          <li><a href="#Portfolio">Portfolio</a></li>
+          <li><a href="#Skills">skills</a></li>
+          <li><a href="#Contact">contact</a></li>
+        </ul>
+      </div>
+
+      <section class="aboutme_2">
+        <hr />
+        <p class="aboutme_2--p">
+          Hello, My name is Yogi. I always like to study and learn new skills
+          and subjects.I am very excited to be part of this chort and very much
+          proud of my team-mates and instructors.
+        </p>
+        <hr />
+
+        <h1>Education and experience</h1>
+
+        <p></p>
+        Hello, My name is Yogi. I always like to study and learn new skills and
+        subjects.I am very excited to be part of this chort and very much proud
+        of my team-mates and instructors
+        <p></p>
+
+        <h1>Why work with me</h1>
+        <ul class="listA">
+          <li>Dedicated</li>
+          <li>hard working</li>
+          <li>Leadership skills</li>
+          <li>Time management</li>
+          <li>interpersonal skills</li>
+        </ul>
+      </section>
     </div>
-
-    <section class="aboutme_2">
-      <hr />
-      <p>
-        Hello, My name is Yogi. I always like to study and learn new skills and subjects.I am
-        very excited to be part of this chort and very much proud of my
-        team-mates and instructors.
-      </p>
-      <hr />
-      <h2>Why work with me</h2>
-      <ul>
-        <li>Dedicated</li>
-        <li>hard working</li>
-        <li>Leadership skills</li>
-        <li>Time management</li>
-        <li>interpersonal skills</li>
-      </ul>
-    </section>
-
-  </div>
-
-   
-    
   </body>
 </html>
