--- a/index.html
+++ b/index.html
@@ -99,11 +99,12 @@
           ></a>
         </section>
         <section class="team_member">
+          <a href="/About_Yogi/index.html">
           <img
             class="team_img"
             src="Home_Page/Team_images/Yogi.png"
             alt="Team_image"
-          />
+          /></a>
           <h3>Yogi</h3>
           <p class="role">Cohort E20</p>
           <p>
