--- a/About_Mariana/About_Mariana_Messy/index_Messy.html
+++ b/About_Mariana/About_Mariana_Messy/index_Messy.html
@@ -1,64 +1,113 @@
 <!-- About_Me_Mariana_Messy -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/About_Mariana/About_Mariana_Messy/index_Messy.css" />
-    <title>About Mariana</title>
-    <!-- icon in tab -->
-    <link rel="shortcut icon" href="/About_Mariana/Team_Logo.jpg" type="x-icon"  /> 
-<!-- font_awesome_link -->
-<script src="https://kit.fontawesome.com/002995de96.js" crossorigin="anonymous"></script>
-<!-- icon_Iconify_link -->
-<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-  </head>
-  <body>
-    <div class="border"></div>
-    <section class="container">
-      <section class="aboutMe , aboutMe_1">
-        <img src="Home_Page/Team_images/Mariana.png" alt="Team_image" />
-        <section class="list">
-          <hr class="hr" />
-          <ul class="list-1 list">
-            <li class="Skills button">Skills</li>
-            <li class="Resume button">Resume</li>
-            <li class="Portfolio button">Portfolio</li>
-            <li class="Contact button">Contact</li>
-          </ul>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
+        <link
+            rel="stylesheet"
+            href="/About_Mariana/About_Mariana_Messy/index_Messy.css"
+        />
+        <title>About Mariana</title>
+        <!-- icon in tab -->
+        <link
+            rel="shortcut icon"
+            href="/About_Mariana/Team_Logo.jpg"
+            type="x-icon"
+        />
+        <!-- font_awesome_link -->
+        <script
+            src="https://kit.fontawesome.com/002995de96.js"
+            crossorigin="anonymous"
+        ></script>
+        <!-- icon_Iconify_link -->
+        <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
+    </head>
+    <body>
+        <div class="Home">
+            <a href="/index.html" target="_blank" rel="noopener noreferrer"
+                ><h1>Home_Page</h1></a
+            >
+        </div>
+        <div class="border">
+            <p>DON'T CLICK ME</p>
+
+            <iframe
+                width="560"
+                height="315"
+                controls autoplay
+                src="https://www.youtube.com/embed/7kMOD-Xd-zU?clip=Ugkxj0xh0QBxlgZfj14rui_mZ-v1BTqYSuXj&amp;clipt=EKD-ChjQ6Aw"
+                title="YouTube video player"
+                frameborder="0"
+            ></iframe>
+        </div>
+        <section class="container">
+            <section class="aboutMe , aboutMe_1">
+                <img src="Home_Page/Team_images/Mariana.png" alt="Team_image" />
+                <section class="list">
+                    <hr class="hr" />
+                    <ul class="list-1 list">
+                        <li class="Skills button">Skills</li>
+                        <li class="Resume button">Resume</li>
+                        <li class="Portfolio button">Portfolio</li>
+                        <li class="Contact button">Contact</li>
+                    </ul>
+                </section>
+            </section>
+            <section class="aboutMe aboutMe_2">
+                <!-- <div class="container">About Me</div> -->
+                <h1 class="header">About Me</h1>
+                <h2>Hi, I'm Mariana Mena</h2>
+                <p class="greeting">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Fugit, officiis. Adipisci officia illo molestiae at labore
+                    quas unde, laborum aspernatur maiores ea voluptatum
+                    voluptates quia repellendus, quos debitis impedit
+                    laboriosam?
+                </p>
+                <hr />
+                <h2>Why Work With Me?</h2>
+                <ul class="list">
+                    <li>Analytical</li>
+                    <li>Result Driven</li>
+                    <li>Problem Solver</li>
+                    <li>Interpersonal Skills</li>
+                    <li>Deadline Conscious</li>
+                    <li>Debugging knowledge</li>
+                </ul>
+                <section class="icons">
+                    <i
+                        class="iconify fa-2x icon"
+                        data-icon="akar-icons:facebook-fill"
+                        style="color: #d77818; margin: 10px"
+                    ></i>
+                    <i
+                        class="iconify fa-2x icon"
+                        data-icon="fa-brands:instagram"
+                        style="color: #d77818; margin: 10px"
+                    ></i>
+                    <i
+                        class="iconify fa-2x icon"
+                        data-icon="fa6-brands:linkedin"
+                        style="color: #d77818; margin: 10px"
+                    ></i>
+                    <i
+                        class="iconify fa-2x icon"
+                        data-icon="fontisto:email"
+                        style="color: #d77818; margin: 10px"
+                    ></i>
+                    <i
+                        class="iconify fa-2x icon"
+                        data-icon="fa:github"
+                        style="color: #d77818; margin: 10px"
+                    ></i>
+                </section>
+            </section>
         </section>
-      </section>
-      <section class="aboutMe aboutMe_2">
-        <!-- <div class="container">About Me</div> -->
-        <h1 class="header">About Me</h1>
-        <h2> Hi, I'm Mariana Mena</h2>
-        <p class="greeting">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
-          officiis. Adipisci officia illo molestiae at labore quas unde, laborum
-          aspernatur maiores ea voluptatum voluptates quia repellendus, quos
-          debitis impedit laboriosam?
-        </p>
-        <hr />
-        <h2>Why Work With Me?</h2>
-        <ul class="list">
-          <li>Analytical</li>
-          <li>Result Driven</li>
-          <li>Problem Solver</li>
-          <li>Interpersonal Skills</li>
-          <li>Deadline Conscious</li>
-          <li>Debugging knowledge</li>
-        </ul>
-        <section class="icons">
-        <i class="iconify fa-2x icon" data-icon="akar-icons:facebook-fill" style="color: #d77818; margin: 10px;"></i>
-        <i class="iconify fa-2x icon" data-icon="fa-brands:instagram" style="color: #d77818; margin: 10px;"></i>
-        <i class="iconify fa-2x icon" data-icon="fa6-brands:linkedin" style="color: #d77818; margin: 10px;"></i>
-        <i class="iconify fa-2x icon" data-icon="fontisto:email" style="color: #d77818; margin: 10px;"></i>
-        <i class="iconify fa-2x icon" data-icon="fa:github" style="color: #d77818; margin: 10px;" ></i>
-      </section>
-      </section>
-    </section>
-    
-  </body>
+    </body>
 </html>
