added target-blank to everyone's images

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section class="container">
       <section class="team">
         <section class="team_member">
-          <a href="/About_Demin/index.html"
+          <a href="/About_Demin/index.html" target="blank"
             ><img
               class="team_img"
               src="Home_Page/Team_images/Demin.png"
@@ -99,7 +99,7 @@
           ></a>
         </section>
         <section class="team_member">
-          <a href="/About_Yogi/index.html">
+          <a href="/About_Yogi/index.html" target="blank">
           <img
             class="team_img"
             src="Home_Page/Team_images/Yogi.png"
@@ -124,11 +124,12 @@
           ></a>
         </section>
         <section class="team_member">
+        <a href="/About_Mitchell/index.html" target="blank">
           <img
             class="team_img"
             src="Home_Page/Team_images/Mitchell.png"
             alt="Team_image"
-          />
+          /></a>
           <h3>Mitchell</h3>
           <p class="role">Cohort E20</p>
           <p>
@@ -148,7 +149,7 @@
           ></a>
         </section>
         <section class="team_member">
-          <a href="About_Danny/index.html"
+          <a href="About_Danny/index.html"  target="blank"
             ><img
               class="team_img"
               src="Home_Page/Team_images/Danny.png"
@@ -173,7 +174,7 @@
           ></a>
         </section>
         <section class="team_member">
-          <a href="About_Mariana\index.html">
+          <a href="About_Mariana\index.html" target="blank">
             <img
               class="team_img"
               src="Home_Page/Team_images/Mariana.png"
