--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           ></a>
         </section>
         <section class="team_member">
-          <a href="/About_Yogi/index.html">
+          <a href="/About_Yogi/main.html">
           <img
             class="team_img"
             src="Home_Page/Team_images/Yogi.png"
@@ -108,9 +108,9 @@
           <h3>Yogi</h3>
           <p class="role">Cohort E20</p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quaerat
-            tempora, voluptatum quas facere dolorum aut cumque nihil nulla harum
-            nemo distinctio quam blanditiis dignissimos.
+            My name is yogi, and living in Nashville for more than a decade. I
+            am an out, going dedicated, and open-minded person. I am passionate
+            about learning new skills and exploring new places/cultures.
           </p>
           <a href="https://github.com/chyogi" target="_blank"
             ><i
