--- a/About_Yogi/index.html
+++ b/About_Yogi/index.html
@@ -4,57 +4,196 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/About_Yogi/main.css" />
-
-    <title>About Yogi</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
-
   <body>
-    <div class="container">
-      <h1>About Me</h1>
+    <section id="page">
+      <header>
+        <div class="header">
+          <h1>About Me</h1>
+        </div>
+      </header>
+      <nav>
+        <img
+          src="./images/Yogi.png"
+          alt="picture of Yogi"
+          class="profile--img"
+        />
+        <div class="nav--contact">
+          <a
+            target="_blank"
+            rel="noopener noreferrer"
+            class="nav--social"
+            href="mailto: email-me@me.com"
+          >
+            <img
+              src="./images/icons8-mail-50.png"
+              alt="mail icon"
+              class="social--icon"
+          /></a>
+          <!-- </div>
+        <div> -->
+          <a
+            target="_blank"
+            rel="noopener noreferrer"
+            class="nav--social"
+            href="https://www.linkedin.com/"
+          >
+            <img
+              src="./images/icons8-linkedin-circled-64.png"
+              alt="linkedin icon"
+              class="social--icon"
+          /></a>
+          <a
+            target="_blank"
+            rel="noopener noreferrer"
+            class="nav--social"
+            href="https://twitter.com/?lang=en"
+          >
+            <img
+              src="./images/icons8-twitter-circled-50.png"
+              alt="twitter icon"
+              class="social--icon"
+          /></a>
+          <a
+            target="_blank"
+            rel="noopener noreferrer"
+            class="nav--social"
+            href="https://www.facebook.com/"
+          >
+            <img
+              src="./images/icons8-facebook-64.png"
+              alt="facebook icon"
+              class="social--icon"
+          /></a>
+          <a
+            target="_blank"
+            rel="noopener noreferrer"
+            class="nav--social"
+            href="https://www.instagram.com/?hl=en"
+          >
+            <img
+              src="./images/icons8-instagram-48.png"
+              alt="instagram icon"
+              class="social--icon"
+          /></a>
+        </div>
+      </nav>
+      <main>
+        <div class="content--root">
+          <p>
+            My name is yogi, and living in Nashville for more than a decade. I
+            am an out, going dedicated, and open-minded person. I am passionate
+            about learning new skills and exploring new places/cultures. I
+            joined NSS to see myself as a successful programmer, and I am very
+            much proud of my instructors and teams, who are always there to help
+            and support me.
+          </p>
+        </div>
 
-      <section class="aboutMe_1">
-        <a href="/About_Yogi/index.html">
-          <img src="/Home_Page/Team_images/Yogi.png" alt="picture of Yogi"
-        /></a>
-      </section>
+        <hr />
 
-      <hr />
+        <div class="content--main">
+          <h2>Education</h2>
+          <p>
+            I earned Bachelor’s degree in Education and Science with a major in
+            Biology. I have masters in English literature, Political Science,
+            Mass Communication, and Journalism and Philosophy. I got many
+            certificates in the Construction, management, and real estate
+            industries.
+          </p>
+        </div>
+        <div class="content--main">
+          <h2>Experience</h2>
+          <p>
+            I always enjoy what I do. I worked as a professor in a college in
+            India for many years and enjoyed being an essential part of
+            students’ life. I cherish the experience of being a part of the big
+            residential and commercial construction projects.
+          </p>
+        </div>
+        <div class="content--main">
+          <h2>Why work with me</h2>
+          <ul>
+            <li>Dedicated</li>
+            <li>hard working</li>
+            <li>Leadership skills</li>
+            <li>Time management</li>
+            <li>interpersonal skills</li>
+          </ul>
+        </div>
+      </main>
+      <footer>
+        <a target="_blank" rel="noopener noreferrer" href="messy.html">
+          <button>Click here for Yin & Yang</button>
+        </a>
+      </footer>
+    </section>
 
-      <div class="list-items">
-        <ul>
-          <li><a href="#Portfolio">Portfolio</a></li>
-          <li><a href="#Skills">skills</a></li>
-          <li><a href="#Contact">contact</a></li>
-        </ul>
+    <!-- <div class="parent">
+      <div class="header">
+        <h1>About Me</h1>
+      </div>
+      <div class="side--bar">
+        <img src="./images/Yogi.png" alt="picture of Yogi" />
       </div>
 
-      <section class="aboutme_2">
+      <div class="content">
+        <div class="content--root">
+          <p>
+            Hello, My name is Yogi. I always like to study and learn new skills
+            and subjects.I am very excited to be part of this chort and very
+            much proud of my team-mates and instructors.
+          </p>
+        </div>
+
         <hr />
-        <p class="aboutme_2--p">
-          Hello, My name is Yogi. I always like to study and learn new skills
-          and subjects.I am very excited to be part of this chort and very much
-          proud of my team-mates and instructors.
-        </p>
-        <hr />
 
-        <h1>Education and experience</h1>
+        <div class="content--main">
+          <h2>Portfolio</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae optio
+            iure distinctio eius quisquam est suscipit incidunt, repellat rem
+            cum, adipisci ex expedita quis temporibus. At veritatis doloribus
+            fuga alias?
+          </p>
+        </div>
+        <div class="content--main">
+          <h2>Skills</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae optio
+            iure distinctio eius quisquam est suscipit incidunt, repellat rem
+            cum, adipisci ex expedita quis temporibus. At veritatis doloribus
+            fuga alias?
+          </p>
+        </div>
 
-        <p></p>
-        Hello, My name is Yogi. I always like to study and learn new skills and
-        subjects.I am very excited to be part of this chort and very much proud
-        of my team-mates and instructors
-        <p></p>
-
-        <h1>Why work with me</h1>
-        <ul class="listA">
-          <li>Dedicated</li>
-          <li>hard working</li>
-          <li>Leadership skills</li>
-          <li>Time management</li>
-          <li>interpersonal skills</li>
-        </ul>
-      </section>
-    </div>
+        <div class="content--main">
+          <h2>Why work with me</h2>
+          <ul>
+            <li>Dedicated</li>
+            <li>hard working</li>
+            <li>Leadership skills</li>
+            <li>Time management</li>
+            <li>interpersonal skills</li>
+          </ul>
+        </div>
+        <div class="content--main">
+          <h2>Contact</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae optio
+            iure distinctio eius quisquam est suscipit incidunt, repellat rem
+            cum, adipisci ex expedita quis temporibus. At veritatis doloribus
+            fuga alias?
+          </p>
+        </div>
+      </div>
+      <div class="footer">
+        <a href="messy.html">
+          <button>Click here for Yin & Yang</button>
+        </a>
+      </div>
+    </div> -->
   </body>
 </html>
