--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           ></a>
         </section>
         <section class="team_member">
-          <a href="/About_Yogi/main.html">
+          <a href="/About_Yogi/index.html" target="blank">
           <img
             class="team_img"
             src="Home_Page/Team_images/Yogi.png"
