helping Yogi with linking everything up

--- a/About_Yogi/index.html
+++ b/About_Yogi/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="/About_Yogi/main.css" />
   </head>
   <body>
     <section id="page">
@@ -15,80 +15,30 @@
         </div>
       </header>
       <nav>
-        <img
-          src="./images/Yogi.png"
-          alt="picture of Yogi"
-          class="profile--img"
-        />
+        <img src="/About_Yogi/images/Yogi.png" alt="picture of Yogi" class="profile--img" />
         <div class="nav--contact">
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            class="nav--social"
-            href="mailto: email-me@me.com"
-          >
-            <img
-              src="./images/icons8-mail-50.png"
-              alt="mail icon"
-              class="social--icon"
-          /></a>
+          <a target="_blank" rel="noopener noreferrer" class="nav--social" href="mailto: email-me@me.com"> <img src="/About_Yogi/images/icons8-mail-50.png" alt="mail icon" class="social--icon" /></a>
           <!-- </div>
         <div> -->
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            class="nav--social"
-            href="https://www.linkedin.com/"
-          >
-            <img
-              src="./images/icons8-linkedin-circled-64.png"
-              alt="linkedin icon"
-              class="social--icon"
+          <a target="_blank" rel="noopener noreferrer" class="nav--social" href="https://www.linkedin.com/">
+            <img src="/About_Yogi/images/icons8-linkedin-circled-64.png" alt="linkedin icon" class="social--icon"
           /></a>
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            class="nav--social"
-            href="https://twitter.com/?lang=en"
-          >
-            <img
-              src="./images/icons8-twitter-circled-50.png"
-              alt="twitter icon"
-              class="social--icon"
+          <a target="_blank" rel="noopener noreferrer" class="nav--social" href="https://twitter.com/?lang=en">
+            <img src="/About_Yogi/images/icons8-twitter-circled-50.png" alt="twitter icon" class="social--icon"
           /></a>
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            class="nav--social"
-            href="https://www.facebook.com/"
-          >
-            <img
-              src="./images/icons8-facebook-64.png"
-              alt="facebook icon"
-              class="social--icon"
+          <a target="_blank" rel="noopener noreferrer" class="nav--social" href="https://www.facebook.com/">
+            <img src="/About_Yogi/images/icons8-facebook-64.png" alt="facebook icon" class="social--icon"
           /></a>
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            class="nav--social"
-            href="https://www.instagram.com/?hl=en"
-          >
-            <img
-              src="./images/icons8-instagram-48.png"
-              alt="instagram icon"
-              class="social--icon"
+          <a target="_blank" rel="noopener noreferrer" class="nav--social" href="https://www.instagram.com/?hl=en">
+            <img src="/About_Yogi/images/icons8-instagram-48.png" alt="instagram icon" class="social--icon"
           /></a>
         </div>
       </nav>
       <main>
         <div class="content--root">
           <p>
-            My name is yogi, and living in Nashville for more than a decade. I
-            am an out, going dedicated, and open-minded person. I am passionate
-            about learning new skills and exploring new places/cultures. I
-            joined NSS to see myself as a successful programmer, and I am very
-            much proud of my instructors and teams, who are always there to help
-            and support me.
+            My name is yogi, and living in Nashville for more than a decade. I am an out, going dedicated, and open-minded person. I am passionate about learning new skills and exploring new
+            places/cultures. I joined NSS to see myself as a successful programmer, and I am very much proud of my instructors and teams, who are always there to help and support me.
           </p>
         </div>
 
@@ -97,20 +47,15 @@
         <div class="content--main">
           <h2>Education</h2>
           <p>
-            I earned Bachelor’s degree in Education and Science with a major in
-            Biology. I have masters in English literature, Political Science,
-            Mass Communication, and Journalism and Philosophy. I got many
-            certificates in the Construction, management, and real estate
-            industries.
+            I earned Bachelor’s degree in Education and Science with a major in Biology. I have masters in English literature, Political Science, Mass Communication, and Journalism and Philosophy. I
+            got many certificates in the Construction, management, and real estate industries.
           </p>
         </div>
         <div class="content--main">
           <h2>Experience</h2>
           <p>
-            I always enjoy what I do. I worked as a professor in a college in
-            India for many years and enjoyed being an essential part of
-            students’ life. I cherish the experience of being a part of the big
-            residential and commercial construction projects.
+            I always enjoy what I do. I worked as a professor in a college in India for many years and enjoyed being an essential part of students’ life. I cherish the experience of being a part of
+            the big residential and commercial construction projects.
           </p>
         </div>
         <div class="content--main">
@@ -125,7 +70,7 @@
         </div>
       </main>
       <footer>
-        <a target="_blank" rel="noopener noreferrer" href="messy.html">
+        <a target="_blank" rel="noopener noreferrer" href="/About_Yogi/messy.html">
           <button>Click here for Yin & Yang</button>
         </a>
       </footer>
